# vuejs-template

./: .gitignore  Dockerfile  docker-compose.yml  k3d-config.yaml  proof.txt
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  adonisrc.ts  package-lock.json  package.json
apps/backend/app/controllers/: events_controller.ts  generate_controller.ts
apps/backend/app/services/: artemis_client.ts  world_bus.ts
apps/backend/start/: artemis.ts  env.ts  kernel.ts  routes.ts
apps/frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  nginx.main.conf  package-lock.json  package.json  vite.config.js
apps/frontend/src/: App.vue
apps/frontend/src/assets/: main.css
apps/frontend/src/components/: WorldGenerator.vue
apps/worker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
apps/worker/src/: main.rs  queue_consumer.rs  stomp.rs  storage.rs  world.rs
deploy/kustomize/base/app/: 00-namespace.yaml  05-secrets.yaml  06-config.yaml  10-backend.yaml  20-frontend.yaml  30-scaledjob.yaml  40-init-queues.yaml  kustomization.yaml
deploy/kustomize/base/artemis/: 00-namespace.yaml  10-secret.yaml  20-service.yaml  30-statefulset.yaml  40-ingress.yaml  kustomization.yaml
deploy/kustomize/base/rustfs/: 00-namespace.yaml  10-secret.yaml  20-service.yaml  30-statefulset.yaml  40-ingress.yaml  kustomization.yaml
k8s/: 00-namespace.yaml  10-deployment.yaml  20-service.yaml  30-hpa.yaml  40-pdb.yaml  50-ingress.yaml
scripts/: deploy.sh  proof.sh
